--- a/README
+++ b/README
@@ -22,19 +22,22 @@ SCRIP_COAWST Wrapper Files Description
 5. read_roms.f            --> read ROMS grids - rho, psi and masking values
 6. read_swan.f            --> read SWAN grids - rho, psi and masking values
 7. read_wrf.f             --> read WRF grids - rho, psi and masking values
-8. create_masks.f         --> Assigns masking for each model and calls SCRIP Package routines   
+8. create_masks.f         --> Assigns masking for each model and calls SCRIP 
+                              package routines   
 10.grids.f**              --> Takes the grid information from above files.
                               This file was modified from original SCRIP package 
                               to read in data seamlessly from SCRIP_COAWST. 
 12. remap_vars.f*         --> common remapping variables
 13. remap_dist_wgt.f*     --> routines for dist-weight remap
-14. remap_conserv.f**     --> This is modified slightly to allow for deallocating variables 
-                              for SCRIP package to run from within SCRIP_COAWST.
-                              Originally contains routines for conservative remap
-15. scrip.f**             --> Original main SCRIP file. Modified for SCRIP package to make it 
-                              into a subroutine.
+14. remap_conserv.f**     --> This is modified slightly to allow for 
+                              deallocating variables for SCRIP package to 
+                              run from within SCRIP_COAWST. Originally contains 
+                              routines for conservative remap
+15. scrip.f**             --> Original main SCRIP file. Modified for SCRIP 
+                              package to make it into a subroutine.
 16. remap_write*          --> remap output
-17. scrip_coawst.f        --> MAIN program file. Calls for reading the inputs, grids 
+17. scrip_coawst.f        --> MAIN program file. Calls for 
+                              reading the inputs, grids 
                               and creating masks
 
 NOT USED BUT PART OF ORIGINAL SCRIP PACKAGE
